# willsee

./: README.md  main.py  pyproject.toml
notebooks/: canvas_test.py  image_outline_processing.py  small_regions_processing.py
src/: __init__.py
src/app/: gradio_app.py
src/pbn/: __init__.py
src/pbn/canvas/: __init__.py  canvas.py  canvas_pbn.py  color_palette.py  facet.py  facet_pbn.py  palette_pbn.py
src/pbn/canvas/canvas_utils/: cluster_image.py  outline_image.py  prepare_image.py  process_image.py
src/pbn/canvas/utils/: merge_facets.py  outline_image.py
src/pbn/canvas_pbn/: canvas_pbn.py
src/pbn/config/: __init__.py  facet_pbn_config.py  pbn_config.py
src/pbn/facet_pbn/: facet_pbn.py
src/runscripts/: kmeans_canvas_init.py
